kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: api.example.com
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /questions
        pathType: Prefix
        backend:
          service:
            name: question-service
            port:
              number: 80
      - path: /collab
        pathType: Prefix
        backend:
          service:
            name: collab-service
            port:
              number: 80
      - path: /matching
        pathType: Prefix
        backend:
          service:
            name: matching-service
            port:
              number: 80
